# sprints2

./: CMakeLists.txt  READ_ME  READ_ME.txt  run_logs.txt
Gtest/: CMakeLists.txt  test_add  test_fh.cpp  test_request.cpp
file_handler/: CMakeLists.txt  Makefile  fh  fh.cpp  fh.hpp  fh_main.cpp
logger/: CMakeLists.txt  Makefile  cmake_install.cmake  simpleLogger.cpp  simpleLogger.h
request/: CMakeLists.txt  RQ_main.cpp  request  request.cpp  request.h
